libgnote_sources = [
  'gnome_keyring/ring.cpp',
  'sharp/datetime.cpp',
  'sharp/dynamicmodule.cpp',
  'sharp/directory.cpp',
  'sharp/exception.cpp',
  'sharp/fileinfo.cpp',
  'sharp/files.cpp',
  'sharp/modulemanager.cpp',
  'sharp/propertyeditor.cpp',
  'sharp/streamreader.cpp',
  'sharp/streamwriter.cpp',
  'sharp/string.cpp',
  'sharp/timespan.cpp',
  'sharp/uri.cpp',
  'sharp/xml.cpp',
  'sharp/xmlconvert.cpp',
  'sharp/xmlreader.cpp',
  'sharp/xmlwriter.cpp',
  'sharp/xsltargumentlist.cpp',
  'sharp/xsltransform.cpp',
  'abstractaddin.cpp',
  'addininfo.cpp',
  'addinmanager.cpp',
  'addinpreferencefactory.cpp',
  'applicationaddin.cpp',
  'contrast.cpp',
  'debug.cpp',
  'iactionmanager.cpp',
  'iconmanager.cpp',
  'ignote.cpp',
  'itagmanager.cpp',
  'importaddin.cpp',
  'mainwindow.cpp',
  'mainwindowaction.cpp',
  'mainwindowembeds.cpp',
  'noteaddin.cpp',
  'notebase.cpp',
  'notebuffer.cpp',
  'noteeditor.cpp',
  'notemanager.cpp',
  'notemanagerbase.cpp',
  'noterenamedialog.cpp',
  'notetag.cpp',
  'note.cpp',
  'notewindow.cpp',
  'popoverwidgets.cpp',
  'preferences.cpp',
  'search.cpp',
  'tag.cpp',
  'tagmanager.cpp',
  'undo.cpp',
  'utils.cpp',
  'watchers.cpp',
  'notebooks/createnotebookdialog.cpp',
  'notebooks/notebook.cpp',
  'notebooks/notebookapplicationaddin.cpp',
  'notebooks/notebookmanager.cpp',
  'notebooks/notebookmenuitem.cpp',
  'notebooks/notebooknewnotemenuitem.cpp',
  'notebooks/notebooknoteaddin.cpp',
  'notebooks/specialnotebooks.cpp',
  'synchronization/filesystemsyncserver.cpp',
  'synchronization/gvfssyncservice.cpp',
  'synchronization/isyncmanager.cpp',
  'synchronization/syncui.cpp',
  'synchronization/syncutils.cpp',
  'synchronization/syncserviceaddin.cpp',
]

libgnote_shared_lib = shared_library(
  'gnote-@0@'.format(version),
  libgnote_sources,
  dependencies: dependencies,
  include_directories: root_include_dir,
)

