install_data('hicolor_apps_scalable_org.gnome.Gnote.svg', install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps', rename: 'org.gnome.Gnote.svg')
install_data('hicolor_apps_16x16_org.gnome.Gnote.png', install_dir: get_option('datadir') / 'icons/hicolor/16x16/apps', rename: 'org.gnome.Gnote.png')
install_data('hicolor_apps_22x22_org.gnome.Gnote.png', install_dir: get_option('datadir') / 'icons/hicolor/22x22/apps', rename: 'org.gnome.Gnote.png')
install_data('hicolor_apps_24x24_org.gnome.Gnote.png', install_dir: get_option('datadir') / 'icons/hicolor/24x24/apps', rename: 'org.gnome.Gnote.png')
install_data('hicolor_apps_32x32_org.gnome.Gnote.png', install_dir: get_option('datadir') / 'icons/hicolor/32x32/apps', rename: 'org.gnome.Gnote.png')
install_data('hicolor_apps_48x48_org.gnome.Gnote.png', install_dir: get_option('datadir') / 'icons/hicolor/48x48/apps', rename: 'org.gnome.Gnote.png')
install_data('hicolor_apps_256x256_org.gnome.Gnote.png', install_dir: get_option('datadir') / 'icons/hicolor/256x256/apps', rename: 'org.gnome.Gnote.png')

private_icon_dir = get_option('datadir') / meson.project_name() / 'icons/hicolor'
places_16_dir = private_icon_dir / '16x16/places'
install_data('hicolor_places_16x16_notebook.png', install_dir: places_16_dir, rename: 'notebook.png')
install_data('hicolor_places_16x16_note.png', install_dir: places_16_dir, rename: 'note.png')

status_16_dir = private_icon_dir / '16x16/status'
install_data('hicolor_status_16x16_pin-active.png', install_dir: status_16_dir, rename: 'pin-active.png')
install_data('hicolor_status_16x16_pin-down.png', install_dir: status_16_dir, rename: 'pin-down.png')
install_data('hicolor_status_16x16_pin-up.png', install_dir: status_16_dir, rename: 'pin-up.png')

actions_22_dir = private_icon_dir / '22x22/actions'
install_data('hicolor_actions_22x22_filter-note-all.png', install_dir: actions_22_dir, rename: 'filter-note-all.png')
install_data('hicolor_actions_22x22_filter-note-unfiled.png', install_dir: actions_22_dir, rename: 'filter-note-unfiled.png')

places_22_dir = private_icon_dir / '22x22/places'
install_data('hicolor_places_22x22_active-notes.png', install_dir: places_22_dir, rename: 'active-notes.png')
install_data('hicolor_places_22x22_notebook.png', install_dir: places_22_dir, rename: 'notebook.png')
install_data('hicolor_places_22x22_note.png', install_dir: places_22_dir, rename: 'note.png')
install_data('hicolor_places_22x22_special-notes.png', install_dir: places_22_dir, rename: 'special-notes.png')

actions_24_dir = private_icon_dir / '24x24/actions'
install_data('hicolor_actions_24x24_filter-note-all.png', install_dir: actions_24_dir, rename: 'filter-note-all.png')
install_data('hicolor_actions_24x24_filter-note-unfiled.png', install_dir: actions_24_dir, rename: 'filter-note-unfiled.png')

places_24_dir = private_icon_dir / '24x24/places'
install_data('hicolor_places_24x24_notebook.png', install_dir: places_24_dir, rename: 'notebook.png')
install_data('hicolor_places_24x24_note.png', install_dir: places_24_dir, rename: 'note.png')

