


SUBDIRS = backlinks \
	bugzilla \
	exporttohtml \
	filesystemsyncservice \
	fixedwidth \
	inserttimestamp \
	notedirectorywatcher \
	noteoftheday \
	printnotes \
	readonly \
	replacetitle \
	specialnotes \
	statistics \
	stickynoteimport \
	tableofcontents \
	tomboyimport \
	underline \
	webdavsyncservice \
	$(NULL)
