


SUBDIRS = backlinks \
	bugzilla \
	exporttohtml \
	filesystemsyncservice \
	fixedwidth \
	inserttimestamp \
	notedirectorywatcher \
	noteoftheday \
	printnotes \
	readonly \
	replacetitle \
	specialnotes \
	statistics \
	stickynoteimport \
	tableofcontents \
	todo \
	tomboyimport \
	underline \
	webdavsyncservice \
	$(NULL)
