introspectdir = $(datadir)/gnote

introspect_DATA = \
	gnote-introspect.xml \
	shell-search-provider-dbus-interfaces.xml

searchproviderdir = $(datadir)/gnome-shell/search-providers
searchprovider_DATA = gnote-search-provider.ini

EXTRA_DIST = \
	gnote-introspect.xml \
	src/dbus/shell-search-provider-dbus-interfaces.xml \
	$(searchprovider_DATA)
