
include $(builddir)/../addins.mk

addinsdir = $(ADDINSDIR)
addins_LTLIBRARIES = libnoteoftheday.la

libnoteoftheday_la_SOURCES = \
	noteoftheday.hpp \
	noteoftheday.cpp \
	noteofthedayapplicationaddin.hpp \
	noteofthedayapplicationaddin.cpp \
	noteofthedaypreferences.hpp \
	noteofthedaypreferences.cpp \
	noteofthedaypreferencesfactory.hpp \
	$(NULL)
